I Fixed a card components and modify our Slide Components

--- a/css/styles-temp.css
+++ b/css/styles-temp.css
@@ -1,22 +1,7 @@
-.row-card{
- padding-top: 2rem
-}
-.cards-holder{
-  padding-left:100px;
-  box-shadow: 5px 20px 50px 2px #888888;
-}
-.card{
-  height: 23rem;
-  width: 20rem;
+.div-container{
+  border: 1px;
+  height: 400px;
+  width: 100px;
+  display: inline-block;
 
-}
-.card-text{
-padding-top: 8px;
-padding-bottom: 5px;
-}
-.card-title{
-  padding-top: 10px;
-}
-.card-img .card-img-size{
-  height: 70px;
 }
